samples/_failures_safe/1761245339_077c1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50638cce.c: In function ‘main’:
./samples/SAFE/__tmp_50638cce.c:153:17: error: expected expression at end of input
  153 |                 if (multiply_matrices(&a, &
      |                 ^~
./samples/SAFE/__tmp_50638cce.c:153:21: error: too few arguments to function ‘multiply_matrices’
  153 |                 if (multiply_matrices(&a, &
      |                     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_50638cce.c:60:5: note: declared here
   60 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_50638cce.c:153:17: error: expected declaration or statement at end of input
  153 |                 if (multiply_matrices(&a, &
      |                 ^~
./samples/SAFE/__tmp_50638cce.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50638cce.c:153:17: error: expected declaration or statement at end of input
